removes spring lambda experimental code and cleans up config